Closed Bug 1870481 Opened 1 year ago Closed 1 year ago

Library and Page Info windows no longer have a border after bug 1869853 and bug 1870309

Categories

(Core :: Widget: Cocoa, defect, P3)

defect

Tracking

()

VERIFIED FIXED
123 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox120 --- unaffected
firefox121 --- unaffected
firefox122 --- verified
firefox123 --- verified

People

(Reporter: sam, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached image border_missing.png

After bug 1869853 (and not fixed by bug 1870309), both the Page Info window and the Library window are missing the OS-provided window border. This is most noticeable in dark mode.

Keywords: regression
Regressed by: 1869853

:sev, since you are the author of the regressor, bug 1869853, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(sev)
Severity: -- → S3
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(emilio)
Priority: -- → P3

Set release status flags based on info from the regressing bug 1869853

Prior to Bug 1867659 transparency requests on top level windows were not honored, there was no vibrancy in the title bar of the library window and it had the standard border.

Apparently the border goes away automatically once you set the clear background color... It is gone in the PiP window as well.

Flags: needinfo?(sev)

(In reply to Vsevolod Buzinov from comment #3)

there was no vibrancy in the title bar of the library window

I don't believe the titlebar is supposed to have vibrancy. On Big Sur and later, the system titlebar is opaque but with tinting from the wallpaper. That was also the Firefox behavior prior to bug 1867659.

In addition, the window background is no longer correct. In light mode, it is white instead of the system color with wallpaper tinting.

Flags: needinfo?(emilio)

By using a opaque-appearance widget (which is effectively what
appearance: -moz-dialog used to provide).

There's the question of whether we want the current vibrant titlebars,
but this restores the behavior precisely for now.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e2d370cb3048 Restore unified toolbar window looks. r=mac-reviewers,desktop-theme-reviewers,dao,spohl
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 123 Branch

:emilio would you like to nominate this for a beta uplift?

Flags: needinfo?(emilio)

Comment on attachment 9369172 [details]
Bug 1870481 - Restore unified toolbar window looks. r=#mac-reviewers

Beta/Release Uplift Approval Request

  • User impact if declined: comment 0
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: comment 0
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Relatively simple fix.
  • String changes made/needed: none
  • Is Android affected?: No
Flags: needinfo?(emilio)
Attachment #9369172 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9369172 [details]
Bug 1870481 - Restore unified toolbar window looks. r=#mac-reviewers

Approved for 122.0b2

Attachment #9369172 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

I have reproduced this issue using Firefox 122.0a1 (2023.12.16) on macOS 12.
I can confirm this issue is fixed, I verified using latest Nightly Firefox 123.0a1 and Firefox 122.0b2 build from treeherder on macOS 12.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: