Bug 1870481 - Restore unified toolbar window looks. r=mac-reviewers,desktop-theme-reviewers,dao,spohl, a=dmeehan

By using a opaque-appearance widget (which is effectively what
appearance: -moz-dialog used to provide).

There's the question of whether we want the current vibrant titlebars,
but this restores the behavior precisely for now.

Differential Revision: https://phabricator.services.mozilla.com/D196712